syntax = "proto3";

package api;

import "google/api/annotations.proto";

option go_package = "KTPM-Coffee-Shop/server/api";

service OrdersService {
    rpc GreetingFromOrderService(EmptyRequest2) returns (SimpleOrdersResponse){
        option (google.api.http) = {
            get: '/Orders'
        };
    };
}

message EmptyRequest2 {}

message SimpleOrdersResponse {
    string message = 1;
}
